--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 dot = "0.1.4"
+enum-map = "2.4.2"
 indoc = "1.0.7"
 json = "0.12.4"
 pyo3 = { version = "0.17.3", features = ["auto-initialize"] }
