--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/analysis/gen_tools/matcher/vhdre"]
-	path = src/analysis/gen_tools/matcher/vhdre
-	url = https://github.com/jhaenen/vhdre/
+[submodule "src/analysis/analyzer/file_manager/matcher/vhdre"]
+	path = src/analysis/analyzer/file_manager/matcher/vhdre
+	url = https://github.com/jhaenen/vhdre.git
