--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5", features = ["derive"] }
 dot = "0.1.4"
 enum-map = "2.4.2"
 enumset = "1.0.12"
